Fix java linting